# cctv-dvr-spacetimedb

./: DEPLOYMENT_ARCHITECTURE.md  IMPLEMENTATION_GUIDE.md  LICENSE  README.md
config/: backup-targets.yaml  policies.yaml  replication.yaml  ssl-certs.yaml
cpp/spacetime-integration/include/: spacetime_client.hpp
cpp/spacetime-integration/src/: spacetime_client.cpp
cpp/video-ingestion/include/: ffmpeg_decoder.hpp
cpp/video-ingestion/src/: ffmpeg_decoder.cpp
docker/: .env.example  Dockerfile.replication  docker-compose.yml
docker/scripts/: backup.sh  health_check.sh  init-replication.sh
rust/core/: Cargo.toml
rust/core/src/: audio_pipeline.rs  lib.rs
rust/replication-manager/: Cargo.toml
rust/replication-manager/src/: backup_store.rs  config.rs  error.rs  failover.rs  health_monitor.rs  lib.rs  metrics.rs  persistence.rs  queue.rs  remote_sync.rs  replicator.rs  tests.rs
