[package]
name = "cctv-core-ingester"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# C++ FFmpeg bindings
ffmpeg-next = { version = "7.0", optional = true }

# SpacetimeDB integration
spacetime-client = { path = "../spacetime-client", optional = true }

# Async channels
flume = "0.11"

features = [
    "default",
    "ffmpeg",
]

ffmpeg = ["ffmpeg-next"]
